--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <style>
       @font-face {
     font-family: 'AHN_L';
-    src: url('/fonts/AHN_L.TTF') format('truetype');
+    src: url('%PUBLIC_URL%/fonts/AHN_L.TTF') format('truetype');
     font-weight: normal;
     font-style: normal;
   }
